// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`match > matchLocation > 0 matches 1`] = `undefined`;

exports[`match > matchLocation > from 1 route 1`] = `
{
  "first": [Circular],
  "isFull": true,
  "isVoid": false,
  "last": [Circular],
  "location": "/",
  "next": undefined,
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
}
`;

exports[`match > matchLocation > from 1 route with params 1`] = `
{
  "first": [Circular],
  "isFull": true,
  "isVoid": false,
  "last": [Circular],
  "location": "/100",
  "next": undefined,
  "params": {
    "id": "100",
  },
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/[:id]",
    "test": {
      "keys": [
        "id",
      ],
      "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
    },
  },
}
`;

exports[`match > matchLocation > from 2 routes 1`] = `
{
  "first": [Circular],
  "isFull": false,
  "isVoid": false,
  "last": {
    "first": [Circular],
    "isFull": true,
    "isVoid": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "isFull": true,
    "isVoid": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    ],
  },
}
`;

exports[`match > matchLocation > from 2 routes with params 1`] = `
{
  "first": [Circular],
  "isFull": false,
  "isVoid": false,
  "last": {
    "first": [Circular],
    "isFull": true,
    "isVoid": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "isFull": true,
    "isVoid": false,
    "last": [Circular],
    "location": "/abc",
    "next": undefined,
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {},
      "loaded": false,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": false,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
      {
        "elements": {},
        "loaded": false,
        "modules": [],
        "path": "/[:id]",
        "test": {
          "keys": [
            "id",
          ],
          "pattern": /\\^\\\\/\\(\\[\\^/\\]\\+\\?\\)\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    ],
  },
}
`;

exports[`match > matchLocation > from 3 routes with "_void" 1`] = `
{
  "first": [Circular],
  "isFull": false,
  "isVoid": false,
  "last": {
    "first": [Circular],
    "isFull": false,
    "isVoid": false,
    "last": [Circular],
    "location": "/abc/xyz",
    "next": undefined,
    "params": {},
    "prev": {
      "first": [Circular],
      "isFull": false,
      "isVoid": true,
      "last": [Circular],
      "location": "/abc",
      "next": [Circular],
      "params": {},
      "prev": [Circular],
      "route": {
        "elements": {
          "_void": {
            "Main": <div>
              Void
            </div>,
          },
        },
        "loaded": true,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": true,
            "modules": [],
            "path": "/abc/xyz",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    },
    "route": {
      "elements": {},
      "loaded": true,
      "modules": [],
      "path": "/abc/xyz",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
      },
    },
  },
  "location": "/",
  "next": {
    "first": [Circular],
    "isFull": false,
    "isVoid": true,
    "last": {
      "first": [Circular],
      "isFull": false,
      "isVoid": false,
      "last": [Circular],
      "location": "/abc/xyz",
      "next": undefined,
      "params": {},
      "prev": [Circular],
      "route": {
        "elements": {},
        "loaded": true,
        "modules": [],
        "path": "/abc/xyz",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "location": "/abc",
    "next": {
      "first": [Circular],
      "isFull": false,
      "isVoid": false,
      "last": [Circular],
      "location": "/abc/xyz",
      "next": undefined,
      "params": {},
      "prev": [Circular],
      "route": {
        "elements": {},
        "loaded": true,
        "modules": [],
        "path": "/abc/xyz",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
        },
      },
    },
    "params": {},
    "prev": [Circular],
    "route": {
      "elements": {
        "_void": {
          "Main": <div>
            Void
          </div>,
        },
      },
      "loaded": true,
      "modules": [],
      "path": "/abc",
      "test": {
        "keys": [],
        "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
      },
      "tree": [
        {
          "elements": {},
          "loaded": true,
          "modules": [],
          "path": "/abc/xyz",
          "test": {
            "keys": [],
            "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
          },
        },
      ],
    },
  },
  "params": {},
  "prev": undefined,
  "route": {
    "elements": {},
    "loaded": true,
    "modules": [],
    "path": "/",
    "test": {
      "keys": [],
      "pattern": /\\^\\(\\?=\\$\\|\\\\/\\)/i,
    },
    "tree": [
      {
        "elements": {
          "_void": {
            "Main": <div>
              Void
            </div>,
          },
        },
        "loaded": true,
        "modules": [],
        "path": "/abc",
        "test": {
          "keys": [],
          "pattern": /\\^\\\\/abc\\(\\?=\\$\\|\\\\/\\)/i,
        },
        "tree": [
          {
            "elements": {},
            "loaded": true,
            "modules": [],
            "path": "/abc/xyz",
            "test": {
              "keys": [],
              "pattern": /\\^\\\\/abc\\\\/xyz\\(\\?=\\$\\|\\\\/\\)/i,
            },
          },
        ],
      },
    ],
  },
}
`;
